--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,1 @@
-<h1>Home Page</h1>
-
-<%if user_signed_in? %>
-  <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
-<%else%>
-  <%= link_to 'sign in', new_user_session_path%>
-<%end%>
+<h1 class=''>Home Page</h1>
