create requests pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "custom", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
@@ -54,7 +55,7 @@
       </div>
 
       <!-- Sidebar Desktop -->
-      <div class="hidden md:flex md:flex-col w-64 bg-gray-900 text-white p-4 space-y-4 sticky top-0 self-start h-screen">
+      <div class="hidden md:flex md:flex-col w-64 bg-primary-color text-white p-4 space-y-4 sticky top-0 self-start h-screen">
         <div class="text-2xl font-bold mb-6">
           <%=link_to 'ProServices', root_path%>
         </div>
