--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
+<% if user_signed_in? %>
+  <p>your role: <%=current_user.role%></p>
+<%end%>
 <%100.times do%>
   <h1 class=''>Home Page</h1>
 <%end%>
