--- a/app/views/service_requests/shared/_request_card.html.erb
+++ b/app/views/service_requests/shared/_request_card.html.erb
@@ -6,20 +6,22 @@
   <div data-popover="profile-info-popover"
     class="flex flex-col h-70 max-w-[24rem] whitespace-normal break-words rounded-lg border border-blue-gray-50 bg-white p-4 font-sans text-sm font-normal text-blue-gray-500 shadow-lg shadow-blue-gray-500/10 focus:outline-none">
     <div class="flex items-center justify-between gap-4 mb-2">
-      <img
-        src=""
-        alt=<%=service_request.client.name%> class="relative inline-block object-cover object-center w-12 h-12 rounded-full" />
+      <% if service_request.client.avatar.attached? %>
+        <%= image_tag url_for(service_request.client.avatar), class: 'relative inline-block object-cover object-center w-12 h-12 rounded-full' %>
+      <%else%>
+        <p>sem avatar</p>
+      <%end%>
         <%=link_to service_request_path(service_request), class: "select-none rounded-lg bg-gray-900 py-2 px-3 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-gray-900/10 transition-all hover:shadow-lg hover:shadow-gray-900/20 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none bg-primary-color" do%>
           See Request
         <%end%>
  
     </div>
     <h6
-      class="flex items-center gap-2 mb-2 font-sans text-base antialiased font-medium leading-relaxed tracking-normal text-blue-gray-900">
-      <span><%=service_request.client.name%></span> •
-      <a class="text-sm text-blue-gray-700" href="#">
+      class="items-center gap-2 mb-2 font-sans text-base antialiased font-medium leading-relaxed tracking-normal text-blue-gray-900">
+      <p><%=service_request.client.name%></p>
+      <p class="text-sm text-blue-gray-700" href="#">
         <%= define_last_request_status(service_request)%>
-      </a>
+      </p>
     </h6>
     <p class="block font-sans text-sm antialiased font-normal leading-normal text-gray-700 grow">
       <%=service_request.description%>
@@ -35,12 +37,7 @@
         <%= service_request.client.city%>
       </p>
       <a href="#" class="flex items-center gap-1 font-sans text-xs antialiased font-normal text-gray-700">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
-          aria-hidden="true" class="-mt-0.5 h-3.5 w-3.5">
-          <path stroke-linecap="round" stroke-linejoin="round"
-            d="M2.25 21h19.5m-18-18v18m10.5-18v18m6-13.5V21M6.75 6.75h.75m-.75 3h.75m-.75 3h.75m3-6h.75m-.75 3h.75m-.75 3h.75M6.75 21v-3.375c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21M3 3h12m-.75 4.5H21m-3.75 3.75h.008v.008h-.008v-.008zm0 3h.008v.008h-.008v-.008zm0 3h.008v.008h-.008v-.008z">
-          </path>
-        </svg>
+        <svg  xmlns="http://www.w3.org/2000/svg"  width="18"  height="18"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-briefcase-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 9a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v9a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-9z" /><path d="M8 7v-2a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v2" /></svg>
         <%= service_request.service.name %>
       </a>
     </div>
