--- a/app/views/service_requests/shared/_request_card.html.erb
+++ b/app/views/service_requests/shared/_request_card.html.erb
@@ -16,13 +16,15 @@
         <%end%>
  
     </div>
-    <h6
-      class="items-center gap-2 mb-2 font-sans text-base antialiased font-medium leading-relaxed tracking-normal text-blue-gray-900">
+    <div class="items-center gap-2 mb-2 font-sans text-base antialiased font-medium leading-relaxed tracking-normal text-blue-gray-900">
       <p><%=service_request.client.name%></p>
-      <p class="text-sm text-blue-gray-700" href="#">
+      <p class="text-slate-700 mb-3 !text-lg">
+        <%= service_request.title %>
+      </p>
+      <p class="text-sm text-blue-gray-700">
         <%= define_last_request_status(service_request)%>
       </p>
-    </h6>
+    </div>
     <p class="block font-sans text-sm antialiased font-normal leading-normal text-gray-700 grow">
       <%=service_request.description%>
     </p>
