--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -1,10 +1,6 @@
 <% content_for :title, "Showing service request" %>
 
 <div class="md:w-2/3 w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
-  <% end %>
-
   <h1 class="font-bold text-4xl">Showing service request</h1>
 
   <%= render @service_request %>
@@ -14,4 +10,8 @@
     <%= link_to "Edit this service request", edit_service_request_path(@service_request), class: "w-full sm:w-auto text-center rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
     <%= button_to "Destroy this service request", @service_request, method: :delete, form_class: "sm:inline-block mt-2 sm:mt-0 sm:ml-2", class: "w-full rounded-md px-3.5 py-2.5 text-white bg-red-600 hover:bg-red-500 font-medium cursor-pointer", data: { turbo_confirm: "Are you sure?" } %>
   <%end%>
+
+  <% if can? :accept_service_request, @service_request %>
+    <%= link_to "Accept this request", accept_service_request_path(@service_request.id, service_request_id: @service_request.id), class: "w-full sm:w-auto text-center rounded-md px-3.5 py-2.5 bg-primary-color hover:bg-blue-500 inline-block font-medium", data: { turbo_confirm: "Are you sure?" } %>
+  <% end %>
 </div>
